--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -82,6 +83,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Icon-Con.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\connected-icon-3-256.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\disconnected-icon-3-256.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
